--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -8,7 +8,7 @@
   <h2>最新の投稿</h2>
 
   {% for post in posts.all %}
-    {{ post.title }}
+    <a href ="{% url 'detail' post.id %}">{{ post.title }}</a>
     <br /><br />
     {{ post.pulished }}
     <br /><br />
