--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang = "ja-jp">
   <head>
     <!-- Required meta tags -->
@@ -7,6 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- django CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/style.css' %}">
+
     <title>
       {% block title %}
       {% endblock %}
