--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -15,7 +15,7 @@
         <br /><br />
         {{ post.pulished }}
         <br /><br />
-        <img src="{{ post.image.url}}" class="img-fluid img-thumbnail" style="max-height: 200px;">
+        <img src="{{ post.image.url}}" class="img-fluid img-thumbnail">
         <br /><br />
         {{ post.summary }}
         <br /><br />
